--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-01-19}
+  \date{2018-01-20}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -2504,7 +2504,7 @@ In general RSE is defined as
 \[ \text{RSE} = \sqrt{\frac{1}{n-p-1}\text{RSS}} \]
 
 \subsection{Other Considerations in Regression
-Model}\label{other-considerations-in-regression-model}
+Model}\label{other-consid}
 
 \textbf{Qualitative Predictors}
 
@@ -2688,6 +2688,292 @@ closer to zero. So we would favor the second model.
 
 ◼
 
+\chapter*{PW 2}\label{pw-2}
+\addcontentsline{toc}{chapter}{PW 2}
+
+\section*{Reporting}\label{reporting}
+\addcontentsline{toc}{section}{Reporting}
+
+\subsection*{Markdown}\label{markdown}
+\addcontentsline{toc}{subsection}{Markdown}
+
+Markdown is a lightweight markup language with plain text formatting
+syntax designed so that it can be converted to HTML and many other
+formats (pdf, docx, etc..).
+
+Click \href{http://agea.github.io/tutorial.md/}{here} to see an example
+of a markdown (\texttt{.md}) syntaxes and the result in HTML. The
+markdown syntaxes are on right and their HTML result is on left. You can
+modify the source text to see the result.
+
+\begin{rmdtip}
+\textbf{Extra}: There is some markdown online editors you can use, like
+\href{http://dillinger.io/}{dillinger.io/}. See the Markdown source file
+and the HTML preview. Play with the source text to see the result in the
+preview.
+\end{rmdtip}
+
+\subsection*{R Markdown}\label{r-markdown}
+\addcontentsline{toc}{subsection}{R Markdown}
+
+R Markdown is a variant of Markdown that has embedded \texttt{R} code
+chunks, to be used with the \texttt{knitr} package to make it
+\textbf{easy to create reproducible web-based reports}.
+
+First, in \texttt{Rstudio} create a new \texttt{R\ Markdown} file. A
+default template will be opened. There is some \texttt{R} code in
+\texttt{R\ chunks}. Clink on \texttt{knit}, save your file and see the
+produced output. The output is a html report containing the results of
+the \texttt{R} codes. If your file is named \texttt{report.Rmd}, your
+report is named \texttt{report.html}.
+
+\begin{rmdcaution}
+\begin{itemize}
+\tightlist
+\item
+  Make sure to have the latest version of \texttt{Rstudio}.
+\item
+  If you have problems creating a \texttt{R\ Markdown}~file (problem in
+  installing packages, etc..) close your \texttt{Rstudio} and reopen it
+  with administrative tools and retry.
+\item
+  If it doesn't work and in order to not lose more time, write your
+  script in an \texttt{.R}~file with your comments and submit it.
+\end{itemize}
+\end{rmdcaution}
+
+\begin{rmdcaution}
+\begin{itemize}
+\item
+  Be ready to submit your report (your \texttt{.html} file) at the end
+  of each class.
+\item
+  You report must be named:
+\end{itemize}
+
+\texttt{YouLastName\_YourFirstName\_WeekNumber.html}
+\end{rmdcaution}
+
+You can find all the informations about R Markdown on this site:
+\href{http://rmarkdown.rstudio.com/lesson-1.html}{rmarkdown.rstudio.com}.
+
+You may also find the following resources helpful:
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf}{The
+  R Markdown Reference Guide}
+\item
+  \href{https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf}{The
+  R Markdown Cheatsheet}
+\end{itemize}
+
+\subsection*{The report to be
+submitted}\label{the-report-to-be-submitted}
+\addcontentsline{toc}{subsection}{The report to be submitted}
+
+In \texttt{Rstudio}, start by creating a R Markdown file. When you
+create it a default template will be opened with the following first
+lines:
+
+\begin{verbatim}
+---
+title: "Untitled"
+output: html_document
+---
+\end{verbatim}
+
+These lines are the YAML header in which you choose the settings of your
+report (title, author, date, appearance, etc..)
+
+For your submitted report, use the following YAML header:
+
+\begin{verbatim}
+---
+title: "Week 2"
+subtitle: "Multiple Linear Regression"
+author: LastName FirstName
+date: "`#r format(Sys.time())`" # remove the # to show the date
+output:
+  html_document:
+    toc: true
+    toc_depth: 2
+    theme: flatly
+---
+\end{verbatim}
+
+In the core of your report:
+
+\begin{itemize}
+\tightlist
+\item
+  Put every exercise in a section, name the section \texttt{Exercise\ i}
+  (i is the exercise's number).
+\item
+  Paste the exercise content.
+\item
+  Write the code of the exercise in R chunks.
+\item
+  Run the chunk to make sure it works.
+\item
+  If there is a need, explain the results.
+\item
+  Click on \texttt{knit}
+\end{itemize}
+
+\section*{Multiple Linear
+Regression}\label{multiple-linear-regression-1}
+\addcontentsline{toc}{section}{Multiple Linear Regression}
+
+\begin{rmdexercise}
+Submit a report following the instructions above. In the first exercise
+you must continue the analysis of the Boston data set.
+\end{rmdexercise}
+
+\subsection*{The exercises}\label{the-exercises}
+\addcontentsline{toc}{subsection}{The exercises}
+
+Continue what we started last week with the Boston dataset which is part
+of the \texttt{MASS} package. Recall that this dataset records the
+median value of houses for 506 neighborhoods around Boston.
+
+\textbf{1}. Load the Boston dataset from \texttt{MASS} package.
+
+\textbf{2}. Split the dataset into traning set and testing set. (keep
+all the variables of the Boston data set)
+
+\textbf{3}. Check if there is a linear relationship between the
+variables \texttt{medv} and \texttt{age}. (use \texttt{cor()} function).
+
+\textbf{4}. Fit a model of housing prices in function of age and plot
+the observations and the regression line.
+
+\textbf{5}. Train a regression model using both \texttt{lstat} and
+\texttt{age} as predictors of median house value. (Remember that we
+transformed \texttt{lstat}, use the same transformation here). What is
+the obtained model?
+
+\textbf{6}. Print the summary of the obtained regression model.
+
+\textbf{7}. Are the predictors significant ?
+
+\textbf{8}. Is the model as a whole significant? Answer on this question
+must be detailed.
+
+\textbf{9}. Train a new model using all the variables of the dataset.
+(We can use \texttt{.} as a short cut instead of writing down all the
+variables names)
+
+\textbf{10}. When using all the variables as predictors, we didn't
+transform \texttt{lstat}. Re train the model using \texttt{log(lstat)}
+instead of \texttt{lstat}.
+
+\textbf{11}. Did \(R^2\) improve ?
+
+\textbf{12}. To see if there is correlated variables print the
+correlation matrix using the \texttt{cor()} function (round the
+correlations with 2 digits).
+
+\textbf{13}. Visualize the correlations using the \texttt{corrplot}
+package. To do so, install the \texttt{corrplot} package, load it, then
+use the function \texttt{corrplot.mixed()}. See this
+\href{https://cran.r-project.org/web/packages/corrplot/vignettes/corrplot-intro.html}{link}
+for examples and to understand how to use it.
+
+\textbf{14}. What is the correlation between \texttt{tax} and
+\texttt{rad}?
+
+\textbf{15}. Run the model again without \texttt{rad}. What happens to
+the \(R^2\) ? and for the F-statistic?
+
+\begin{rmdinsight}
+Of course \(R^2\) should go a little lower because we deleted one of the
+variables. But check for the model significance (F-statistic) gets
+higher, which means the p-values gets lower and thus the model is more
+significant without \texttt{rad}.
+\end{rmdinsight}
+
+\textbf{16}. Calculate the mean squared error (MSE) for the last model.
+
+\textbf{17}. Rerun the model but delete \texttt{tax} instead of
+\texttt{rad} and compare it with the previous model.
+
+\textbf{Anova}
+
+Next we will apply an analysis of variances (ANOVA) in order to test if
+there is a significant difference of means between two groups \(i\) and
+\(j\) (Consider group \(i\) is the suburbs bounding the river and \(j\)
+the suburbs which not). The hypotheses are
+
+\[ H_0 : \mu_i = \mu_j \]
+
+\[ H_1 : \mu_i \neq \mu_j \]
+
+Where \(\mu_i\) is the mean of \texttt{medv} in group \(i\).
+
+\textbf{18}. How many of the suburbs in this data set bound the Charles
+river?
+
+\textbf{19}. Create Boxplots of the median value of houses with respect
+to the variable \texttt{chas}. Do we observe some difference between the
+median value of houses with respect to the neighborhood to Charles
+River?
+
+\textbf{20}. Next we will apply an analysis of variances (ANOVA) in
+order to test if there is a significant difference of means between two
+groups \(i\) and \(j\) (Consider group \(i\) is the suburbs bounding the
+river and \(j\) the suburbs which not). The hypotheses are
+
+\[ H_0 : \mu_i = \mu_j \]
+
+\[ H_1 : \mu_i \neq \mu_j \]
+
+Where \(\mu_i\) is the mean of \texttt{medv} in group \(i\).
+
+Calculate \(\mu_i\) and \(\mu_j\) (in one line using the function
+\texttt{aggregate()}).
+
+\textbf{21}. Apply an ANOVA test of \texttt{medv} whith respect to
+\texttt{chas} (use the function \texttt{aov()}). Print the result and
+the summary of it. what do you conclude ?
+
+\textbf{Qualitative predictors}
+
+\textcolor{white}{[}\faExclamationTriangle\textcolor{white}{]}
+\textbf{Before starting the next question, please read section
+\ref{other-consid} and Appendix \ref{use-qual} about using qualitative
+predictors in regression}.
+
+\textbf{22}. In the Boston data set there is a categorical variable
+\texttt{chas} which corresponds to Charles River (= 1 if a suburb bounds
+the river; 0 otherwise). Use command \texttt{str()} to see how this
+variable is present in the dataset. Notice that it is not codified as a
+factor, but it has values 0 or 1, so it is already dummyfied.
+
+\textbf{23}. Fit a new model where the predictors are the Charles River
+and the Crime Rate. Interpret the coefficients of this model and
+conclude if the presence of the river adds a valuable information for
+explaining the house price.
+
+\textbf{24}. Is \texttt{chas} is significant as well in the presence of
+more predictors?
+
+\textbf{Interaction terms}
+
+As you saw in section \ref{other-consid} we may sometimes try models
+with intercation terms. Let's say we have two predictors \(X_1\) and
+\(X_2\), the way of adding these interactions in \texttt{lm} is through
+\texttt{:} and \texttt{*}. The operator \texttt{:} only adds the term
+\(X_1X_2\) and \texttt{*} adds \(X_1\), \(X_2\), and \(X_1X_2\).
+
+\textbf{25}. Fit a model whith first order interaction term where
+predictors are \texttt{lstat} and \texttt{age}. Print its summary.
+
+\textbf{26}. Fit a model with all the first order interaction terms.
+
+◼
+
 \appendix \addcontentsline{toc}{chapter}{\appendixname}
 
 
@@ -2821,6 +3107,86 @@ distributed uniformly in \((0,1)\). If \(H_0\) does not hold, then the
 distribution of the \(p\)-value is not uniform but concentrated at \(0\)
 (where the rejections of \(H_0\) take place).
 \end{rmdinsight}
+
+\chapter{Use of qualitative predictors}\label{use-qual}
+
+An important situation is how to deal with \emph{qualitative}, and not
+\emph{quantitative}, predictors when we fit a regression model.
+Qualitative predictors, also known as \emph{categorical} variables or,
+in \texttt{R}'s terminology, \emph{factors}, are very common, for
+example in social sciences. Dealing with them requires some care and
+proper understanding of how these variables are represented.
+
+The simplest case is the situation with \textbf{two levels}. A binary
+variable \(C\) with two levels (for example, \emph{a} and \emph{b}) can
+be represented as \[
+D=\left\{\begin{array}{ll}
+1,&\text{if }C=b,\\
+0,&\text{if }C=a.
+\end{array}\right.
+\] \(D\) now is a \emph{dummy variable}: it codifies with zeros and ones
+the two possible levels of the categorical variable. An example of \(C\)
+could be \emph{gender}, which has levels \emph{male} and \emph{female}.
+The dummy variable associated is \(D=0\) if the gender is male and
+\(D=1\) if the gender is female.
+
+The advantage of this \emph{dummification} is its interpretability in
+regression models. Since level \emph{a} corresponds to \(0\), it can be
+seen as the \emph{reference level} to which level \emph{b} is compared.
+This is the key point in dummification: \textbf{set one level as the
+reference and codify the rest as departures from it} with ones.
+
+\texttt{R} does the dummification automatically (translates a
+categorical variable \(C\) into its dummy version \(D\)) if it detects
+that a factor variable is present in the regression model.
+
+Let's see now the case with \textbf{more than two levels}, for example,
+a categorical variable \(C\) with levels \emph{a}, \emph{b}, and
+\emph{c}. If we take \emph{a} as the reference level, this variable can
+be represented by \emph{two} dummy variables: \[
+D_1=\left\{\begin{array}{ll}1,&\text{if }C=b,\\0,& \text{if }C\neq b\end{array}\right.
+\] and \[
+D_2=\left\{\begin{array}{ll}1,&\text{if }C=c,\\0,& \text{if }C\neq c.\end{array}\right.
+\] Then \(C=a\) is represented by \(D_1=D_2=0\), \(C=b\) is represented
+by \(D_1=1,D_2=0\) and \(C=c\) is represented by \(D_1=0,D_2=1\).
+
+In general, if we have a categorical variable with \(J\) levels, then
+the number of dummy variables required is \(J-1\). Again, \texttt{R}
+does the dummification automatically for you if it detects that a factor
+variable is present in the regression model.
+
+\begin{rmdinsight}
+It may happen that one dummy variable, say \(D_1\) is not significant,
+while other dummy variables, say \(D_2\), are significant.
+\end{rmdinsight}
+
+\begin{rmdcaution}
+\textbf{Do not codify a categorical variable as a discrete variable}.
+This constitutes a major methodological fail that will flaw the
+subsequent statistical analysis.
+
+For example if you have a categorical variable \texttt{party} with
+levels \texttt{partyA}, \texttt{partyB}, and \texttt{partyC}, do not
+encode it as a discrete variable taking the values \texttt{1},
+\texttt{2}, and \texttt{3}, respectively. If you do so:
+
+\begin{itemize}
+\tightlist
+\item
+  You assume implicitly an order in the levels of \texttt{party}, since
+  \texttt{partyA} is closer to \texttt{partyB} than to \texttt{partyC}.
+\item
+  You assume implicitly that \texttt{partyC} is three times larger than
+  \texttt{partyA}.
+\item
+  The codification is completely arbitrary -- why not considering
+  \texttt{1}, \texttt{1.5}, and \texttt{1.75} instead of?
+\end{itemize}
+
+The right way of dealing with categorical variables in regression is to
+set the variable as a factor and let \texttt{R} do internally the
+dummification.
+\end{rmdcaution}
 
 
 \end{document}
