--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -927,10 +927,6 @@ and \textbf{allow an exception} in your browser. The next time the
 animation will show up correctly.
 \end{rmdinsight}
 
-\begin{verbatim}
-#ans> PhantomJS not found. You can install it with webshot::install_phantomjs(). If it is installed, please make sure the phantomjs executable can be found via the PATH variable.
-\end{verbatim}
-
 The ANOVA table summarizes the decomposition of the variance. Here is
 given in the layout employed by \texttt{R}.
 
@@ -1366,7 +1362,7 @@ the \texttt{plot()} function, type \texttt{?plot}.
 
 \CommentTok{# Sampling from a Normal - 100 random points from a N(0, 1)}
 \KeywordTok{rnorm}\NormalTok{(}\DataTypeTok{n =} \DecValTok{10}\NormalTok{, }\DataTypeTok{mean =} \DecValTok{0}\NormalTok{, }\DataTypeTok{sd =} \DecValTok{1}\NormalTok{)}
-\CommentTok{#ans>  [1] -0.267  0.345 -1.539  0.545  0.260  0.438 -1.662  0.156 -2.252 -0.450}
+\CommentTok{#ans>  [1]  1.053  1.188  0.957 -2.024  0.709  0.454 -0.600  1.087 -0.242  1.382}
 
 \CommentTok{# If you want to have always the same result, set the seed of the random number}
 \CommentTok{# generator}
@@ -2884,7 +2880,7 @@ for examples and to understand how to use it.
 \textbf{14}. What is the correlation between \texttt{tax} and
 \texttt{rad}?
 
-\textbf{15}. Run the model again without \texttt{rad}. What happens to
+\textbf{15}. Run the model again without \texttt{tax}. What happens to
 the \(R^2\) ? and for the F-statistic?
 
 \begin{rmdinsight}
@@ -2895,9 +2891,6 @@ significant without \texttt{rad}.
 \end{rmdinsight}
 
 \textbf{16}. Calculate the mean squared error (MSE) for the last model.
-
-\textbf{17}. Rerun the model but delete \texttt{tax} instead of
-\texttt{rad} and compare it with the previous model.
 
 \textbf{Anova}
 
@@ -2912,18 +2905,18 @@ the suburbs which not). The hypotheses are
 
 Where \(\mu_i\) is the mean of \texttt{medv} in group \(i\).
 
-\textbf{18}. How many of the suburbs in this data set bound the Charles
+\textbf{17}. How many of the suburbs in this data set bound the Charles
 river?
 
-\textbf{19}. Create Boxplots of the median value of houses with respect
+\textbf{18}. Create Boxplots of the median value of houses with respect
 to the variable \texttt{chas}. Do we observe some difference between the
 median value of houses with respect to the neighborhood to Charles
 River?
 
-\textbf{20}. Calculate \(\mu_i\) and \(\mu_j\) (in one line using the
+\textbf{19}. Calculate \(\mu_i\) and \(\mu_j\) (in one line using the
 function \texttt{aggregate()}).
 
-\textbf{21}. Apply an ANOVA test of \texttt{medv} whith respect to
+\textbf{20}. Apply an ANOVA test of \texttt{medv} whith respect to
 \texttt{chas} (use the function \texttt{aov()}). Print the result and
 the summary of it. what do you conclude ?
 
@@ -2934,18 +2927,18 @@ the summary of it. what do you conclude ?
 \ref{other-consid} and Appendix \ref{use-qual} about using qualitative
 predictors in regression}.
 
-\textbf{22}. In the Boston data set there is a categorical variable
+\textbf{21}. In the Boston data set there is a categorical variable
 \texttt{chas} which corresponds to Charles River (= 1 if a suburb bounds
 the river; 0 otherwise). Use command \texttt{str()} to see how this
 variable is present in the dataset. Notice that it is not codified as a
 factor, but it has values 0 or 1, so it is already dummyfied.
 
-\textbf{23}. Fit a new model where the predictors are the Charles River
+\textbf{22}. Fit a new model where the predictors are the Charles River
 and the Crime Rate. Interpret the coefficients of this model and
 conclude if the presence of the river adds a valuable information for
 explaining the house price.
 
-\textbf{24}. Is \texttt{chas} is significant as well in the presence of
+\textbf{23}. Is \texttt{chas} is significant as well in the presence of
 more predictors?
 
 \textbf{Interaction terms}
@@ -2956,10 +2949,10 @@ with intercation terms. Let's say we have two predictors \(X_1\) and
 \texttt{:} and \texttt{*}. The operator \texttt{:} only adds the term
 \(X_1X_2\) and \texttt{*} adds \(X_1\), \(X_2\), and \(X_1X_2\).
 
-\textbf{25}. Fit a model whith first order interaction term where
+\textbf{24}. Fit a model whith first order interaction term where
 predictors are \texttt{lstat} and \texttt{age}. Print its summary.
 
-\textbf{26}. Fit a model with all the first order interaction terms.
+\textbf{25}. Fit a model with all the first order interaction terms.
 
 ◼
 
