--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2018-01-22}
+  \date{2018-01-24}
 
 % \defaultfontfeatures{
 %     Path = /home/ghassany/texmf/fonts/opentype/public/fontawesome/}
@@ -2905,8 +2905,11 @@ the suburbs which not). The hypotheses are
 
 Where \(\mu_i\) is the mean of \texttt{medv} in group \(i\).
 
-\textbf{17}. How many of the suburbs in this data set bound the Charles
-river?
+\textbf{17}. In the Boston data set there is a categorical variable
+\texttt{chas} which corresponds to Charles River (= 1 if a suburb bounds
+the river; 0 otherwise). Use command \texttt{str()} to see how this
+variable is present in the dataset. How many of the suburbs in this data
+set bound the Charles river?
 
 \textbf{18}. Create Boxplots of the median value of houses with respect
 to the variable \texttt{chas}. Do we observe some difference between the
@@ -2927,18 +2930,20 @@ the summary of it. what do you conclude ?
 \ref{other-consid} and Appendix \ref{use-qual} about using qualitative
 predictors in regression}.
 
-\textbf{21}. In the Boston data set there is a categorical variable
-\texttt{chas} which corresponds to Charles River (= 1 if a suburb bounds
-the river; 0 otherwise). Use command \texttt{str()} to see how this
-variable is present in the dataset. Notice that it is not codified as a
-factor, but it has values 0 or 1, so it is already dummyfied.
+\begin{rmdinsight}
+We are going to use the categorical variable \texttt{chas} which
+corresponds to Charles River (= 1 if a suburb bounds the river; 0
+otherwise). Using the \texttt{str()} command you can notice that this
+variable is not codified as a factor, but it has values 0 or 1, so it is
+already dummyfied.
+\end{rmdinsight}
 
-\textbf{22}. Fit a new model where the predictors are the Charles River
+\textbf{21}. Fit a new model where the predictors are the Charles River
 and the Crime Rate. Interpret the coefficients of this model and
 conclude if the presence of the river adds a valuable information for
 explaining the house price.
 
-\textbf{23}. Is \texttt{chas} is significant as well in the presence of
+\textbf{22}. Is \texttt{chas} is significant as well in the presence of
 more predictors?
 
 \textbf{Interaction terms}
@@ -2949,10 +2954,10 @@ with intercation terms. Let's say we have two predictors \(X_1\) and
 \texttt{:} and \texttt{*}. The operator \texttt{:} only adds the term
 \(X_1X_2\) and \texttt{*} adds \(X_1\), \(X_2\), and \(X_1X_2\).
 
-\textbf{24}. Fit a model whith first order interaction term where
+\textbf{23}. Fit a model whith first order interaction term where
 predictors are \texttt{lstat} and \texttt{age}. Print its summary.
 
-\textbf{25}. Fit a model with all the first order interaction terms.
+\textbf{24}. Fit a model with all the first order interaction terms.
 
 ◼
 
